# holiday-meal-planner

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CLI_USAGE_GUIDE.md  LLM_CONFIG_GUIDE.md  README.md  pyproject.toml
.claude/commands/: adlc.architect.implement.md  adlc.architect.init.md  adlc.architect.specify.md  adlc.levelup.implement.md  adlc.levelup.skills.md  adlc.levelup.specify.md  adlc.product.init.md  adlc.product.validate.md  adlc.spec.clarify.md  adlc.spec.tasks.md  architect.analyze.md  architect.clarify.md  architect.validate.md  levelup.clarify.md  levelup.init.md  product.analyze.md  product.clarify.md  product.implement.md  product.specify.md  spec.analyze.md  spec.checklist.md  spec.constitution.md  spec.implement.md  spec.plan.md  spec.specify.md
.specify/: config.json  extensions.yml  init-options.json  skills.json
.specify/extensions/: .registry
.specify/memory/: constitution.md
.specify/presets/: .registry
core/: __init__.py  meal_planner.py  models.py
core/agents/: __init__.py  ingredient_consolidator.py  recipe_processor.py  timeline_generator.py
core/services/: __init__.py  consolidator.py  nlp_processor.py  scheduler.py  web_extractor.py
interfaces/: __init__.py
interfaces/api/: __init__.py  dependencies.py  main.py  responses.py
interfaces/api/routers/: __init__.py  health.py  jobs.py  process.py
interfaces/cli/: __init__.py  commands.py  formatters.py  main.py
shared/: __init__.py  config.py  exceptions.py  i18n.py  logging.py  service_layer.py  validators.py
shared/locales/: en.json  he.json
specs/001-holiday-meal-planner/: context.md  data-model.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-holiday-meal-planner/checklists/: requirements.md
specs/001-holiday-meal-planner/contracts/: api-spec.yml
tests/: __init__.py  conftest.py  test_cli_hebrew.py  test_llm_config.py  test_real_cli.py
tests/contract/: __init__.py  test_interface_contracts.py
