[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "interfaces", "shared"]

[project]
name = "holiday-meal-planner"
version = "0.1.0"
description = "AI-powered holiday meal planner with recipe processing and timeline generation"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "Holiday Meal Planner Team"},
]
keywords = ["meal-planning", "recipes", "ai", "holiday", "cooking"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    # Core AI and processing
    "pydantic-ai>=0.0.13",
    "pydantic>=2.0.0",
    # CLI interface
    "typer[all]>=0.12.0",
    # API interface
    "fastapi[all]>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    # Web scraping and parsing
    "recipe-scrapers>=14.55.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "extruct>=0.16.0",
    # NLP processing
    "spacy>=3.7.0",
    # Unit conversion and fuzzy matching
    "pint>=0.23",
    "fuzzywuzzy[speedup]>=0.18.0",
    # Optimization and scheduling
    "networkx>=3.2",
    "ortools>=9.8.0",
    # Utilities
    "python-dateutil>=2.8.2",
    "typing-extensions>=4.8.0",
    "en-core-web-sm",
]

[project.optional-dependencies]
dev = [
    # Code formatting and linting
    "black>=23.11.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",

    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",  # For testing FastAPI
    "responses>=0.24.0",  # For mocking web requests

    # Development utilities
    "pre-commit>=3.5.0",
    "ruff>=0.1.6",
]

[project.scripts]
holiday-planner = "interfaces.cli.main:main"

[project.urls]
Homepage = "https://github.com/your-org/holiday-meal-planner"
Documentation = "https://holiday-meal-planner.readthedocs.io/"
Repository = "https://github.com/your-org/holiday-meal-planner"
Issues = "https://github.com/your-org/holiday-meal-planner/issues"

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | venv
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "recipe_scrapers.*",
    "spacy.*",
    "ortools.*",
    "networkx.*",
    "pydantic_ai.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=core --cov=interfaces --cov=shared --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["core", "interfaces", "shared"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/.venv/*",
    "*/build/*",
    "*/dist/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.ruff]
target-version = "py39"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # imported but unused
"tests/**/*" = ["F401", "F811"]  # test files can have duplicates

[tool.ruff.mccabe]
max-complexity = 10

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
